Fix logo and logo css on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1375,8 +1375,8 @@
 				line-height: 4.75rem;
 			}
 
-				#header .logo .icon:before {
-					font-size: 1.75rem;
+				#header .logo img {
+					width: 4.75rem;
 				}
 
 			#header .content .inner {
